Replace removing a final modifier, which is not possible in JDK 18+, by ByteBuddy interceptors. Needed to change PlatformWindowFactory from an interface into a plain class, because they are needed in the boostrap class loader (interfaces and abstract classes cannot be injected). Some other classes need to be public for the same reason.