@@ -130,6 +130,7 @@
               <java.awt.headless>false</java.awt.headless>
             </systemPropertyVariables>
             <argLine>
+              -XX:+EnableDynamicAgentLoading
               --add-exports=java.desktop/java.awt=ALL-UNNAMED
               --add-exports=java.desktop/java.awt.peer=ALL-UNNAMED
               --add-exports=java.desktop/sun.awt.image=ALL-UNNAMED
